[gd_scene load_steps=7 format=3 uid="uid://7b4lgevh5krm"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_xuf3f"]
[ext_resource type="Script" path="res://Scripts/Player/smooth_camera.gd" id="2_vw5h8"]
[ext_resource type="Texture2D" uid="uid://dy1hydavrxcs0" path="res://Assets/Textures/crosshair001.png" id="3_2ch81"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rfkup"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_igm17"]
radius = 0.4
height = 1.8

[sub_resource type="LabelSettings" id="LabelSettings_50nvk"]
font_size = 72

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_xuf3f")

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_rfkup")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_igm17")

[node name="CameraPivot" type="Node3D" parent="."]

[node name="SmoothCamera" type="Camera3D" parent="CameraPivot"]
top_level = true
script = ExtResource("2_vw5h8")
snap_speed = 15.0

[node name="VisionCast" type="RayCast3D" parent="CameraPivot"]
target_position = Vector3(0, 0, -2)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="GameUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InteractLabel" type="Label" parent="GameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = 160.0
offset_right = 51.5
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyMadeLabel" type="Label" parent="GameUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -160.0
offset_right = 264.0
offset_bottom = -60.9997
grow_vertical = 0
text = "$999"
label_settings = SubResource("LabelSettings_50nvk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComboLabel" type="Label" parent="GameUI/MoneyMadeLabel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0

[node name="ReticleContainer" type="CenterContainer" parent="GameUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReticleTexture" type="TextureRect" parent="GameUI/ReticleContainer"]
layout_mode = 2
texture = ExtResource("3_2ch81")

[node name="DayTimerLabelContainer" type="HBoxContainer" parent="GameUI"]
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 151.0
offset_bottom = 140.0

[node name="DayTimerLabelHours" type="Label" parent="GameUI/DayTimerLabelContainer"]
layout_mode = 2
text = "00"

[node name="DayTimerLabelColon" type="Label" parent="GameUI/DayTimerLabelContainer"]
layout_mode = 2
text = ":"

[node name="DayTimerLabelMinutes" type="Label" parent="GameUI/DayTimerLabelContainer"]
layout_mode = 2
text = "00"
